crates/oxc_css_parser/tests/recoverable/eof/unclosed-block.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: unclosed block before end of file
  ┌─ unclosed-block.css:1:5
  │
1 │ div {
  │     ^
